<resources>
    <string name="app_name">QuizApp</string>
    <string name="q1">Q1:Which smartphone OS do you like best?</string>
    <string name="programmer_quiz">Programmer Quiz</string>
    <string name="q2">Q2:Which program language used in Android?</string>
    <string name="q3">Q3:Who created the Android OS?</string>
    <string name="q4">Q4:How many orientation do LinearLayout have,Write it.</string>
    <string name="q1_a">Android</string>
    <string name="q1_b">IOS</string>
    <string name="q1_c">WP8</string>
    <string name="q3_d">Oracle</string>
    <string name="q3_c">Sun</string>
    <string name="q3_b">MicroSoft</string>
    <string name="q3_a">Google</string>
    <string name="q2_a">C++</string>
    <string name="q2_b">Java</string>
    <string name="q2_c">JavaScript</string>
    <string name="q2_d">C#</string>
    <string name="am1">"Your score is "</string>
    <string name="am2">Congratulations! All the answers is correct!</string>
    <string name="am3">"The error question is "</string>
</resources>
